# FestBoy

./: CMakeLists.txt  CMakePresets.json  README.md
FestBoy/: CMakeLists.txt  FestBoy.cpp  FestBoy.h  main.cpp
FestBoy/inc/: bootrom.h  cpuSM83.h  cpu_sm83.h  emu_typedefs.h  game_pack.h  gb.h  instructions.h  no_mbc.h  opcodesTests.h  ppu.h  util_funcs.h
FestBoy/src/: cpuSM83.cpp  cpu_sm83.cpp  game_pack.cpp  gb.cpp  no_mbc.cpp  ppu.cpp
